tests/fixtures/syntax/valid/dir_contains_expectation.repor
case "dir contains" {
  $ true
  assert {
    dir <"artifacts"> contains "result.json"
  }
}
