tests/fixtures/syntax/invalid/fixture_reference_absolute_path.repor
case "fixture reference path must be relative" {
  $ true
  assert {
    file <"out.txt"> contents_equals @"/etc/passwd"
  }
}
